Fix width of shrunk boxes on mobile

--- a/components/services/services.sass
+++ b/components/services/services.sass
@@ -176,8 +176,6 @@
   .shrink
     height: 10%
     width: 90%
-    .box
-      width: 2.8rem
     .box__title
       font-size: $services-box-shrunk-header-font-size--mobile
   .box
